<resources>
    <string name="app_name">Fontier</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="already_have_an_account">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="check">Check</string>
    <string name="submit">Submit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="check_username">Check  Username</string>


    <string name="ted_image_picker_album_all">All</string>
    <string name="ted_image_picker_empty">Empty</string>
    <string name="ted_image_picker_title">Select Image</string>
    <string name="ted_image_picker_done">Done</string>
    <string name="ted_image_picker_max_count">You can not add more</string>
    <string name="ted_image_picker_min_count">You have to choice images</string>
    <string name="version">V e r s i o n</string>
    <string name="description">D e s c r i p t i o n</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="pass">PASSWORD</string>
    <string name="conf_pass">CONFIRM PASSWORD</string>
    <string name="contentdescription">ContentDescription</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="register">Register</string>
    <string name="check_username_for_set_password_n_small_if_username_available_you_will_refirect_to_set_password_page_small"><![CDATA[Check username for set password. If username available you will redirect to set password page]]></string>
    <string name="set_password">Set Password</string>
    <string name="set_the_password_to_complete_the_process">Set the password to complete the process</string>
    <string name="clear">Clear</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="verify_msg">Please enter your mobile number to receive a verification code</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="confirmation">Confirmation</string>
    <string name="resend_code">Resend Code</string>
    <string name="confirm">Confirm</string>
    <string name="phone_number">Phone Number</string>
    <string name="usericon">usericon</string>

</resources>
