<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorWhite">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="5sp"
            app:statusBarForeground="@color/colorWhite">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/logBackView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" android:adjustViewBounds="true"/>

            <ImageView
                    android:id="@+id/logoView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="@dimen/_100sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    tools:srcCompat="@tools:sample/avatars" />

            <com.wee3ventures.fontier.FontView
                    android:id="@+id/fontView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/grey_800"
                    android:textSize="@dimen/_18sdp"
                    app:fontName="Poppins_Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logoView" />

            <com.wee3ventures.fontier.FontView
                    android:id="@+id/fontView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:text="@string/sign_to_continue"
                    app:fontName="Poppins_ExtraLight"
                    android:textColor="@color/grey_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fontView4" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fontView5">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        app:hintEnabled="true"
                        app:startIconDrawable="@drawable/ic_mail_popup"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="@string/username"
                            android:inputType="textEmailAddress|textWebEmailAddress"
                            tools:ignore="UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        app:hintEnabled="true"
                        app:startIconDrawable="@drawable/ic_locked_icon_gdo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/userLayout"
                        app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_regular"
                            android:hint="@string/password"
                            android:inputType="textWebPassword|textPassword"
                            tools:ignore="UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/rememberBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/remember_me"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passLayout"
                        app:useMaterialThemeColors="true"
                        tools:ignore="UnusedAttribute" />

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/forgotBtn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/red_500"
                        android:textSize="@dimen/_13sdp"
                        android:textAllCaps="false"
                        app:layout_constraintBottom_toBottomOf="@+id/rememberBox"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/rememberBox" />

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginBtn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="10sp"
                        android:text="@string/sign_in"
                        android:textAllCaps="true"
                        app:backgroundTint="@color/blue_grey_800"
                        app:elevation="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/forgotBtn"
                        tools:targetApi="jelly_bean" />

                <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="32dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/loginBtn">

                    <com.wee3ventures.fontier.FontView
                            android:id="@+id/fontView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5sp"
                            android:text="@string/don_t_have_account"
                            android:textSize="@dimen/_12sdp"
                            app:fontName="Poppins_Regular" />

                    <com.wee3ventures.fontier.FontView
                            android:id="@+id/signUpBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:padding="5sp"
                            android:singleLine="true"
                            android:text="@string/create_a_new_account"
                            android:textColor="#3F51B5"
                            android:textSize="@dimen/_12sdp"
                            app:fontName="Poppins_Medium" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>