<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="@dimen/_5sdp"
        android:orientation="vertical">
    <com.wee3ventures.fontier.FontView
            android:id="@+id/hintlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontName="Poppins_Regular"
            tools:hint="@string/app_name"
            android:textSize="@dimen/_16sdp"
            android:textColorHint="@color/grey_800"/>
    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardUseCompatPadding="true"
            style="@style/Widget.MaterialComponents.CardView">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                    android:id="@+id/maleBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/blue_white_background_selector"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_5sdp">

                <ImageView
                        android:id="@+id/maleicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="@dimen/_70sdp"
                        android:padding="@dimen/_10sdp"
                        app:srcCompat="@drawable/ic_man_fontier"
                        tools:ignore="VectorDrawableCompat" />

                <com.wee3ventures.fontier.FontView
                        android:id="@+id/malelabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/font_blue_white_selector"
                        android:textSize="@dimen/_16sdp"
                        app:fontName="Poppins_Medium" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/femaleBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/blue_white_background_selector"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_5sdp">

                <ImageView
                        android:id="@+id/femaleicon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="@dimen/_70sdp"
                        android:padding="@dimen/_10sdp"
                        app:srcCompat="@drawable/ic_girl_fontier"
                        tools:ignore="VectorDrawableCompat" />

                <com.wee3ventures.fontier.FontView
                        android:id="@+id/femalelabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_blue_white_selector"
                        android:text="@string/female"
                        android:textSize="@dimen/_16sdp"
                        app:fontName="Poppins_Medium" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>