<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorWhite">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="5sp"
            app:statusBarForeground="@color/colorWhite">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/logoView"
                    android:maxWidth="@dimen/_100sdp"
                    android:maxHeight="@dimen/_100sdp"
                    android:adjustViewBounds="true"
                    tools:srcCompat="@tools:sample/avatars" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    tools:ignore="ContentDescription"/>

            <com.wee3ventures.fontier.FontView android:layout_width="wrap_content"
                                               android:layout_height="wrap_content"
                                               android:text="@string/app_name"
                                               android:id="@+id/appNamelabel"
                                               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                                               android:layout_marginRight="32dp"
                                               app:layout_constraintStart_toStartOf="parent"
                                               android:textSize="20sp"
                                               app:fontName="Poppins_Light"
                                               android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
                                               app:layout_constraintTop_toBottomOf="@+id/logoView"
                                               android:layout_marginTop="16dp"/>

            <com.wee3ventures.fontier.FontView android:layout_width="0dp"
                                               android:layout_height="0dp"
                                               android:hint="@string/description"
                                               android:id="@+id/desclabel"
                                               app:layout_constraintTop_toBottomOf="@+id/appNamelabel"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               android:layout_marginEnd="32dp"
                                               android:layout_marginRight="32dp"
                                               android:textSize="16sp"
                                               android:textColor="@color/md_grey_900"
                                               app:layout_constraintStart_toStartOf="parent"
                                               android:layout_marginLeft="32dp"
                                               android:layout_marginStart="32dp"
                                               android:layout_marginTop="32dp"
                                               app:fontName="Poppins_ExtraLight"
                                               app:layout_constraintBottom_toTopOf="@+id/versionlabel"
                                               android:layout_marginBottom="32dp"/>

            <com.wee3ventures.fontier.FontView android:layout_width="wrap_content"
                                               android:layout_height="wrap_content"
                                               android:text="@string/version"
                                               app:layout_constraintBottom_toBottomOf="parent"
                                               android:layout_marginBottom="32dp"
                                               android:id="@+id/versionlabel"
                                               android:textSize="@dimen/font_18"
                                               app:fontName="Poppins_Regular"
                                               app:layout_constraintStart_toStartOf="parent"
                                               android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               android:layout_marginEnd="32dp" android:layout_marginRight="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>